# L3AC

./: .gitignore  README.md  pyproject.toml
l3ac/: __init__.py  codec.py  layers.py  modules.py
l3ac/tconv/: __init__.py  base.py
src/: main.py  runtime_resolver.py  test_ddp_sanity.py
src/l3ac/: codec.py  en_codec.py  layers.py  modules.py
src/l3ac/tconv/: __init__.py  base.py
src/model/exp/: __init__.py  acc_runtime.py  train.py
src/model/exp/configs/: 3kbps_music.toml
src/prepare/data_process/: mtg_now.py
src/xtract/: ddp.py
tools/: test_dataloader.py
