[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "l3ac"
version = "0.1.0"
description = "L3AC research codebase"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "torch",
    "accelerate",
    "wandb",
    "safetensors",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
